tests/algorithms/x/Java/graphs/graphs_floyd_warshall.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden432_graphs_floyd_warshall2467573393/001/Main.java:60: error: incompatible types: double[] cannot be converted to Object[]
            graph = ((Object[][])(new Object[][]{new double[]{0.0, 5.0, INF, 10.0}, new double[]{INF, 0.0, 3.0, INF}, new double[]{INF, INF, 0.0, 1.0}, new double[]{INF, INF, INF, 0.0}}));
                                                 ^
/tmp/TestJavaTranspiler_Algorithms_Golden432_graphs_floyd_warshall2467573393/001/Main.java:60: error: incompatible types: double[] cannot be converted to Object[]
            graph = ((Object[][])(new Object[][]{new double[]{0.0, 5.0, INF, 10.0}, new double[]{INF, 0.0, 3.0, INF}, new double[]{INF, INF, 0.0, 1.0}, new double[]{INF, INF, INF, 0.0}}));
                                                                                    ^
/tmp/TestJavaTranspiler_Algorithms_Golden432_graphs_floyd_warshall2467573393/001/Main.java:60: error: incompatible types: double[] cannot be converted to Object[]
            graph = ((Object[][])(new Object[][]{new double[]{0.0, 5.0, INF, 10.0}, new double[]{INF, 0.0, 3.0, INF}, new double[]{INF, INF, 0.0, 1.0}, new double[]{INF, INF, INF, 0.0}}));
                                                                                                                      ^
/tmp/TestJavaTranspiler_Algorithms_Golden432_graphs_floyd_warshall2467573393/001/Main.java:60: error: incompatible types: double[] cannot be converted to Object[]
            graph = ((Object[][])(new Object[][]{new double[]{0.0, 5.0, INF, 10.0}, new double[]{INF, 0.0, 3.0, INF}, new double[]{INF, INF, 0.0, 1.0}, new double[]{INF, INF, INF, 0.0}}));
                                                                                                                                                        ^
/tmp/TestJavaTranspiler_Algorithms_Golden432_graphs_floyd_warshall2467573393/001/Main.java:61: error: incompatible types: Object[][] cannot be converted to double[][]
            result = ((double[][])(floyd_warshall(((double[][])(graph)))));
                                                               ^
5 errors
